@@ -42,7 +42,7 @@ ifeq ($(ARCHT),hppa)
 RELOC=dlopen
 endif
 
-GMP=--enable-dynsysgmp
+GMP?=
 
 DEBUG=
 #ifeq ($(ARCHT),hppa)
@@ -242,7 +242,7 @@ binary-indep: build install
 	dh_md5sums -i
 	dh_builddeb -i
 
-binary-arch: build install debian/substvars
+binary-arch: build install #debian/substvars
 	dh_testdir -a
 	dh_testroot -a
 	dh_installdocs -a
@@ -258,7 +258,7 @@ binary-arch: build install debian/substvars
 	dh_fixperms -a
 	dh_installdeb -a
 	dh_shlibdeps -a
-	dh_gencontrol -a -u"-Vgcc=$(MCC)"
+	dh_gencontrol -a -u"-Vgcc=$(MCC) -Vbinutils=binutils-dev(=$(BVER))"
 	dh_md5sums -a
 	dh_builddeb -a
 
